# moiraweave-steps

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  catalog.yaml  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: publish-catalog.yml  release.yml  step-ci.yml
scripts/: generate_catalog.py
steps/audio-transcribe-whisper/: pyproject.toml  step.yaml
steps/audio-transcribe-whisper/app/: config.py  main.py  step.py
steps/audio-transcribe-whisper/tests/: conftest.py  test_step.py
steps/text-embed-fastembed/: Dockerfile  pyproject.toml  step.yaml
steps/text-embed-fastembed/app/: config.py  main.py  step.py
steps/text-embed-fastembed/tests/: conftest.py  test_step.py
steps/vector-index-qdrant/: pyproject.toml  step.yaml
steps/vector-index-qdrant/app/: config.py  main.py  step.py
steps/vector-index-qdrant/tests/: conftest.py  test_step.py
steps/vector-search-qdrant/: Dockerfile  pyproject.toml  step.yaml
steps/vector-search-qdrant/app/: config.py  main.py  step.py
steps/vector-search-qdrant/tests/: conftest.py  test_step.py
steps/vision-clip/: CHANGELOG.md  pyproject.toml  step.yaml
steps/vision-clip/app/: config.py  main.py  step.py
steps/vision-clip/tests/: conftest.py  test_step.py
tasks/audio-transcribe/: schema.json
tasks/image-embed/: schema.json
tasks/text-chunk/: schema.json
tasks/text-classify/: schema.json
tasks/text-embed/: schema.json
tasks/text-generate/: schema.json
tasks/text-rerank/: schema.json
tasks/vector-index/: schema.json
tasks/vector-search/: schema.json
tasks/vision-embedding/: schema.json
