[project]
name = "moiraweave-steps"
version = "0.1.2"
description = "Legacy MoiraWeave step catalog and task schemas"
requires-python = ">=3.13"
dependencies = []

# Virtual project: this repository orchestrates step packages but is not itself a library.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["steps/*"]

[dependency-groups]
dev = [
    "moiraweave-step-sdk>=0.1.0",
    "moiraweave-shared>=0.1.0",
    "fakeredis>=2.26",
    "httpx>=0.28",
    "mypy>=2.0",
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "pre-commit>=4.0",
    "ruff>=0.15",
    "types-PyYAML>=6.0",
    "yamllint>=1.38.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["slowapi.*", "opentelemetry.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["steps"]
asyncio_mode = "auto"
addopts = "--cov=steps --cov-report=term-missing --cov-report=xml --import-mode=importlib"

[tool.coverage.run]
source = ["steps"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
