[project]
name = "step-audio-transcribe-whisper"
version = "0.1.0"
description = "MoiraWeave step: audio transcription via Whisper ASR Webservice"
requires-python = ">=3.13"
dependencies = [
    "moiraweave-step-sdk",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "uvicorn[standard]>=0.30",
]

[tool.uv]
package = false

[tool.uv.sources]
moiraweave-step-sdk = { path = "../../../moiraweave-core/services/step-sdk" }
