[project]
name = "step-text-embed-fastembed"
version = "0.1.0"
description = "MoiraWeave step: text embedding via FastEmbed"
requires-python = ">=3.13"
dependencies = [
    "moiraweave-step-sdk>=0.1.0",
    "fastembed>=0.4",
    "pydantic-settings>=2.0",
    "uvicorn[standard]>=0.30",
]

[tool.uv]
package = false
